# ESP32_Projects

./: CMakeLists.txt  README.md  sdkconfig
components/: esp-modbus.rar  libmodbus-esp-idf.rar
components/espressif__esp_modem/include/: esp_modem_c_api_types.h
components/espressif__esp_modem/port/linux/esp_event_mock/include/: esp_event_base.h
components/espressif__esp_modem/port/linux/esp_netif_linux/: CMakeLists.txt
components/json/: CMakeLists.txt
components/json/cJSON/: CMakeLists.txt  CONTRIBUTORS.md  cJSON.c  cJSON.h  cJSON_Utils.c
components/json/cJSON/tests/: misc_tests.c
components/lib60870/: CMakeLists.txt
components/lib60870/hal/socket/esp32/: socket_esp32.c
components/libmodbus/: CMakeLists.txt
components/libmodbus/priv_include/modbus/: config.h
components/libmodbus/src/modbus/: modbus-rtu.c
components/utils/: CMakeLists.txt
components/utils/include/: utils.h
components/utils/src/: utils.cpp
main/: main.cpp
